[project]
name = "rov_collector"
version = "1.0.0"
description = "Downloads ROV info from various sources"
readme = "README.md"
authors = [
    {name = "Justin Furuness", email = "jfuruness@gmail.com"},
]
license = {file = "LICENSE.txt"}
keywords = [
    "Furuness",
    "BGP",
    "Hijack",
    "ROA",
    "ROV",
    "AS",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "requests-cache==1.1.1",
    "matplotlib==3.5.2"
]

[project.urls]
homepage = "https://github.com/jfuruness/rov_collector.git"


[project.optional-dependencies]
test = [
    "types-requests==2.31.0.10",
    "black==23.11.0",
    "pre-commit==3.5.0",
    "setuptools==68.0.0",
    "wheel==0.40.0",
    "pytest==7.4.3",
    "mypy==1.7.0",
    "flake8==6.1.0",
    "tox==4.11.3",
    "pytest-xdist==3.3.1",
    "ruff==0.1.5",
]

[tool.setuptools.package-data]
rov_collector = ["py.typed"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.scripts]
rov_collector = "rov_collector.__main__:main"

[tool.pytest.ini_options]
python_files = "test*"
python_classes = "Test*"
python_functions = "test*"
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning"
]
markers = [
    "slow: All slow tests"
]

[tool.mypy]
mypy_path = "rov_collector"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
