[project]
name = "rov_collector"
version = "1.1.4"
description = "Downloads ROV info from various sources"
readme = "README.md"
authors = [
    {name = "Justin Furuness", email = "jfuruness@gmail.com"},
]
license = {file = "LICENSE.txt"}
keywords = [
    "Furuness",
    "BGP",
    "Hijack",
    "ROA",
    "ROV",
    "AS",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.10"
dependencies = [
    "tqdm==4.66.2",
    "requests-cache==1.2.0",
    "matplotlib==3.8.3"
]

[project.urls]
homepage = "https://github.com/jfuruness/rov_collector.git"


[project.optional-dependencies]
test = [
    "black==24.2.0",
    "pre-commit==3.6.2",
    "types-requests==2.31.0.20240218",
    "mypy==1.8.0",
    "flake8==7.0.0",
    "tox==4.13.0",
    "pytest-xdist==3.5.0",
    "ruff==0.2.2",
]

[tool.setuptools.package-data]
rov_collector = ["py.typed"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.scripts]
rov_collector = "rov_collector.__main__:main"

[tool.pytest.ini_options]
python_files = "test*"
python_classes = "Test*"
python_functions = "test*"
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning"
]
markers = [
    "slow: All slow tests"
]

[tool.mypy]
mypy_path = "rov_collector"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
